add list items and columns

--- a/index.html
+++ b/index.html
@@ -33,27 +33,26 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
-    <header class="row">
+    <header class="row" style="border-style: solid">
       <div class="four columns">
         <img src="http://static.comicvine.com/uploads/scale_small/3/36009/752549-killer_tomato.jpg" class="logo">
       </div>
       <div class="eight columns">
-      lorem ip sum
-      lorem ip sum
-      lorem ip sum
-      lorem ip sum
-      lorem ip sum
-      lorem ip sum
-      lorem ip sum
-      lorem ip sum
-      lorem ip sum
-      lorem ip sum
-      lorem ip sum
+        <ul class="u-pull-right">
+          <li class="navItem">Link one</li>
+          <li class="navItem">Link two</li>
+          <li class="navItem">Link three</li>
+        </ul>
       </div>
     </header>
 
     <main class="row">
-    This is the main body of the page
+    <div style="border-style: solid" class="one-half column">
+    stuff
+    </div>
+    <div style="border-style: solid" class="one-half column">
+    stuff
+    </div>
     </main>
 
     <footer class="row">
